# test

./: Makefile  README.md  Task.txt
client/: CMakeLists.txt
client/src/: Sender.cpp  Sender.h  TestDataGenerator.cpp  TestDataGenerator.h  UdpSocket.h  main.cpp
server/: CMakeLists.txt
server/src/: Crc.h  DefaultProtocol.cpp  DefaultProtocol.h  IProtocol.h  RequestHandler.cpp  RequestHandler.h  UdpServer.cpp  UdpServer.h  UdpSocket.cpp  main.cpp
